edit dockerfile