@@ -1,9 +1,16 @@
-FROM openjdk:8-jre-slim
+FROM gradle:8.5.0-jdk21 AS build
+COPY --chown=gradle:gradle . /home/gradle/src
+WORKDIR /home/gradle/src
+RUN gradle build --no-daemon -x test
+
+FROM openjdk:21
 
 EXPOSE 8080
 
 RUN mkdir /app
 
-COPY build/libs/*.jar /app/spring-boot-application.jar
+COPY --from=build /home/gradle/src/build/libs/*.jar /app/
 
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
+RUN ls /app/
+
+ENTRYPOINT ["java", "-jar","/app/GeoData-0.0.1-SNAPSHOT.jar"]
